Modify login.properties and login_fr.properties to remove separate error messages for username and password fields and add a shared error message.

--- a/src/main/resources/com/cameronm/scheduleconsult/i18n/loginscreen/login.properties
+++ b/src/main/resources/com/cameronm/scheduleconsult/i18n/loginscreen/login.properties
@@ -1,7 +1,7 @@
 languageLabel=EN
-titleLabel=ScheduleConsult
 translatedTitleLabel=
 usernameLabel=Username:
 passwordLabel=Password:
 signInButton=Sign In
-credentialErrorLabel=ERROR: Invalid Username or Password!
+credentialError=ERROR: Invalid Username or Password!
+blankCredentialFieldError=ERROR: The Username and/or Password\rfields cannot be blank!
