--- a/src/main/resources/com/cameronm/scheduleconsult/i18n/loginscreen/login_fr.properties
+++ b/src/main/resources/com/cameronm/scheduleconsult/i18n/loginscreen/login_fr.properties
@@ -1,7 +1,7 @@
 languageLabel=FR
-titleLabel=ScheduleConsult
 translatedTitleLabel=Planificateur de consultations
-usernameLabel=Nom d'utilisateur:
-passwordLabel=Mot de passe:
+usernameLabel=Nom d'utilisateur :
+passwordLabel=Mot de passe :
 signInButton=Se connecter
-credentialErrorLabel=ERREUR: Nom d'utilisateur ou mot de passe invalide!
+credentialError=ERREUR : Nom d'utilisateur ou mot de passe invalide !
+blankCredentialFieldError=ERREUR : Les champs Nom d'utilisatrice et/ou\rMot de passe ne peuvent pas être vides !
