Makeover with CSS. LoginScreen modified with new layout

--- a/src/main/resources/com/cameronm/scheduleconsult/i18n/loginscreen/login.properties
+++ b/src/main/resources/com/cameronm/scheduleconsult/i18n/loginscreen/login.properties
@@ -1,7 +1,7 @@
 languageLabel=EN
 translatedTitleLabel=
-usernameLabel=Username:
-passwordLabel=Password:
+usernamePrompt=Enter Username
+passwordPrompt=Enter Password
 signInButton=Sign In
 credentialError=ERROR: Invalid Username or Password!
 blankCredentialFieldError=ERROR: The Username and/or Password\rfields cannot be blank!
